@@ -32,11 +32,12 @@ function cryptographp_captcha_display() {
     $_SESSION['cryptographp_lang'][$_SESSION['cryptographp_id']] = $sl;
     $dir = $pth['folder']['plugins'].'cryptographp/';
     $ptx = $plugin_tx['cryptographp'];
+    $get = 'id='.$_SESSION['cryptographp_id'].'&amp;lang='.$sl;
     $o = '<div class="cryptographp">'."\n";
     $alt = htmlspecialchars($ptx['alt_image'], ENT_QUOTES);
-    $o .= tag('img id="cryptogram" src="'.$dir.'cryptographp.php?id='.$_SESSION['cryptographp_id'].'&amp;lang='.$sl.'" alt="'.$alt.'"')."\n"; // TODO: id!
+    $o .= tag('img id="cryptogram" src="'.$dir.'cryptographp.php?'.$get.'" alt="'.$alt.'"')."\n"; // TODO: id!
     $alt = htmlspecialchars($ptx['alt_audio'], ENT_QUOTES);
-    $o .= '<a href="'.$dir.'audio.php?id='.$_SESSION['cryptographp_id'].'">'
+    $o .= '<a href="'.$dir.'audio.php?'.$get.'">'
 	    .tag('img src="'.$dir.'images/audio.png" alt="'.$alt.'" title="'.$alt.'"').'</a>'."\n";
     $alt = htmlspecialchars($ptx['alt_reload'], ENT_QUOTES);
     $o .= '<a href="javascript:void(0)" onclick="document.getElementById(\'cryptogram\').src = \''
