@@ -19,8 +19,9 @@ based on <a href="http://www.captcha.fr/">cryptographp</a>.
 It was modified to fit in the CMSimple environment,
 can be called multiple times (even on the same page),
 and offers an alternative audio CAPTCHA.
-It could be used as utility plugin for other plugins, such as
-<a href="http://3-magi.net/?CMSimple_XH/Advancedform_XH">Advancedform_XH</a>.</p>
+It could be used as utility plugin by other plugins, such as
+<a href="http://3-magi.net/?CMSimple_XH/Advancedform_XH">Advancedform_XH</a>,
+to deter spambots from successfully submitting forms.</p>
 
 <ul id="nav">
 <li><a href="#notice">Important Notice</a></li>
@@ -100,6 +101,8 @@ But even a perfect CAPTCHA can't prevent human spammers from posting spam.</p>
 <p>Cryptographp_XH is licensed under
 <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>.</p>
 <p>&copy; 2011-2012 Christoph M. Becker</p>
+<p>Slovak translation &copy; 2012 Dr. Martin Sereday</br>
+Czech translation &copy; 2012 Josef Němec</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2><a name="credits">Credits</a></h2>
