@@ -1,0 +1,46 @@
+<?php
+
+$plugin_tx['cryptographp']['message_enter_code']="Vložte antiSPAMový kód!<br>(Cookies ve vašem prohlížeči musí být povoleny)";
+$plugin_tx['cryptographp']['error_user_time']="Příliš rychlé pokusy!";
+$plugin_tx['cryptographp']['cf_crypt_width']="Šířka kryptogramu v px.";
+$plugin_tx['cryptographp']['cf_crypt_height']="Výška kryptogramu v pixelech";
+$plugin_tx['cryptographp']['cf_bg_rgb_red']="RGB barva pozadí: intenzita červené";
+$plugin_tx['cryptographp']['cf_bg_rgb_green']="RGB barva pozadí: intenzita zelené";
+$plugin_tx['cryptographp']['cf_bg_rgb_blue']="RGB barva pozadí: intenzita modré";
+$plugin_tx['cryptographp']['cf_bg_clear']="Má se použít průhledné pozadí? (jen pro formát PNG): <em>yes</em> nebo <em>no</em>";
+$plugin_tx['cryptographp']['cf_bg_image']="Název souboru obrázku pozadí. Velikost obrázku se přizpůsobí velikosti kryptogramu. Pokud se uvede název adresáře, mohou se použít náhodné obrázky z adresáře.";
+$plugin_tx['cryptographp']['cf_bg_frame']="Má se okolo kryptogramu použít rámeček? <em>yes</em> nebo <em>no</em>";
+$plugin_tx['cryptographp']['cf_char_rgb_red']="RGB barva znaků: intenzita červené";
+$plugin_tx['cryptographp']['cf_char_rgb_green']="RGB barva znaků: intenzita zelené";
+$plugin_tx['cryptographp']['cf_char_rgb_blue']="RGB barva znaků: intenzita modré";
+$plugin_tx['cryptographp']['cf_char_color_random']="Má se barva volit náhodně? <em>yes</em> nebo <em>ne</em>";
+$plugin_tx['cryptographp']['cf_char_color_random_level']="Světlost náhodných barev: <em>0</em> (nezměněná), <em>1</em> (jen velmi jasné barvy), <em>2</em> (jen jasné barvy), <em>3</em> (jen tmavé barvy) nebo <em>4</em> (jen velmi tmavé barvy)";
+$plugin_tx['cryptographp']['cf_char_clear']="Průhlednost písmen: od <em>0</em> (plné) do <em>127</em> (úplně průhledné). Vyžaduje PHP >= 4.3.2";
+$plugin_tx['cryptographp']['cf_fonts']="Středníkem oddělený seznam fontů, které jsou k dispozici v adresáři crypt/fonts/ ";
+$plugin_tx['cryptographp']['cf_char_allowed']="Povolené znaky";
+$plugin_tx['cryptographp']['cf_crypt_easy']="Mají být kryptogramy vytvářeny alternativně ze souhlásek a samohlásek? <em>yes</em> nebo <em>no</em>: <em>yes</em> nebo <em>no</em>";
+$plugin_tx['cryptographp']['cf_char_allowed_consonants']="Povolené souhlásky";
+$plugin_tx['cryptographp']['cf_char_allowed_vowels']="Povolené samohlásky";
+$plugin_tx['cryptographp']['cf_char_count_min']="Minimální počet znaků v kryptogramu.";
+$plugin_tx['cryptographp']['cf_char_count_max']="Maximální počet znaků v kryptogramu.";
+$plugin_tx['cryptographp']['cf_char_space']="Mezera mezi znaky v pixelech";
+$plugin_tx['cryptographp']['cf_char_size_min']="Minimální velikost fontu pro znaky";
+$plugin_tx['cryptographp']['cf_char_size_max']="Maximální velikost fontu pro znaky";
+$plugin_tx['cryptographp']['cf_char_angle_max']="Max. uhel naklonění znaků";
+$plugin_tx['cryptographp']['cf_char_displace']="Mají se znaky zobrazit náhodně vertikálně? <em>yes</em> nebo <em>no</em>";
+$plugin_tx['cryptographp']['cf_crypt_gaussian_blur']="Má být obrázek rozoostřený Gausianovou metodou?: <em>yes</em> nebo <em>no</em>. Vyžaduje PHP > 5.0.0";
+$plugin_tx['cryptographp']['cf_crypt_gray_scale']="Má být obrázek konvertován do šedé škály? <em>yes</em> nebo <em>no</em>. Vyžaduje PHP > 5.0.0";
+$plugin_tx['cryptographp']['cf_noise_pixel_min']="Minimální počet náhodných pixelů.";
+$plugin_tx['cryptographp']['cf_noise_pixel_max']="Maximální počet náhodných pixelů.";
+$plugin_tx['cryptographp']['cf_noise_line_min']="Minimální počet náhodných čar.";
+$plugin_tx['cryptographp']['cf_noise_line_max']="Maximální počet náhodných čar.";
+$plugin_tx['cryptographp']['cf_noise_circle_min']="Minimální počet náhodných kroužků.";
+$plugin_tx['cryptographp']['cf_noise_circle_max']="Maximální počet náhodných kroužků.";
+$plugin_tx['cryptographp']['cf_noise_color_char']="Barva šumu: <em>1</em> (Barva znaků), <em>2</em> (Barva pozadí) nebo <em>3</em> (Náhodná barva)";
+$plugin_tx['cryptographp']['cf_noise_brush_size']="Tloušťka čar a kroužků.";
+$plugin_tx['cryptographp']['cf_noise_above']="Má se kolem znaků zobrazit šum? <em>yes</em> nebo <em>no</em>";
+$plugin_tx['cryptographp']['cf_crypt_format']="Formát obrázku: <em>gif</em>, <em>png</em> nebo <em>jpeg</em>";
+$plugin_tx['cryptographp']['cf_crypt_use_timer']="Čas mezi jednotlivými obnovami kryptogramu.";
+$plugin_tx['cryptographp']['cf_crypt_use_timer_error']="Strategie, pokud se kryptogramy obnovují příliš často: <em>1</em> (vráti se k obrázku), <em>2</em> (zobrazit chybové hlášení) nebo <em>3</em> (použít nastavený čas pro obnovení)";
+
+?>
