@@ -1,0 +1,53 @@
+<?php
+
+/*
+ * Copyright (c) 2012 Dr. Martin Sereday - www.cmsimple.sk - info(at)cmsimple.sk
+ *
+ * This work is licensed under a Creative Commons Attribution 3.0 Unported
+ * License.
+ */
+
+$plugin_tx['cryptographp']['message_enter_code']="Vložte antiSPAMový kód!<br>(Cookies vo vašom prehliadači musia byť povolené)";
+$plugin_tx['cryptographp']['error_user_time']="Príliš rýchle pokusy!";
+$plugin_tx['cryptographp']['cf_crypt_width']="Šírka kryptogramu v px.";
+$plugin_tx['cryptographp']['cf_crypt_height']="Výška kryptogramu v px.";
+$plugin_tx['cryptographp']['cf_bg_rgb_red']="RGB farba pozadia: intenzita červenej";
+$plugin_tx['cryptographp']['cf_bg_rgb_green']="RGB farba pozadia: intenzita zelenej";
+$plugin_tx['cryptographp']['cf_bg_rgb_blue']="RGB farba pozadia: intenzita modrej";
+$plugin_tx['cryptographp']['cf_bg_clear']="Má sa použiť priehľadné pozadie? (iba pre formát PNG): <em>áno</em> alebo <em>nie</em>";
+$plugin_tx['cryptographp']['cf_bg_image']="Názov súboru obrázku pozadia. Veľkosť obrázku sa prispôsobí veľkosti kryptogramu. Ak sa uvedie názov adresára, môžu sa použiť náhodné obrázky z adresára.";
+$plugin_tx['cryptographp']['cf_bg_frame']="Má sa okolo kryptogramu použiť rám? <em>áno</em> alebo <em>nie</em>";
+$plugin_tx['cryptographp']['cf_char_rgb_red']="RGB farba znakov: intenzita červenej";
+$plugin_tx['cryptographp']['cf_char_rgb_green']="RGB farba znakov: intenzita zelenej";
+$plugin_tx['cryptographp']['cf_char_rgb_blue']="RGB farba znakov: intenzita modrej";
+$plugin_tx['cryptographp']['cf_char_color_random']="Má sa farba voliť náhodne? <em>áno</em> alebo <em>nie</em>";
+$plugin_tx['cryptographp']['cf_char_color_random_level']="Jasnosť náhodných farieb: <em>0</em> (nezmenená), <em>1</em> (iba veľmi jasné farby), <em>2</em> (iba jasné farby), <em>3</em> (iba tmavé farby) alebo <em>4</em> (iba veľmi tmavé farby)";
+$plugin_tx['cryptographp']['cf_char_clear']="Priehľadnosť písmen: od <em>0</em> (plné) do <em>127</em> (úplne priehľadné). Vyžaduje PHP >= 4.3.2";
+$plugin_tx['cryptographp']['cf_fonts']="Bodkočiarkou oddelený zoznam fontov, ktoré sú k dispozícii v adresári crypt/fonts/ ";
+$plugin_tx['cryptographp']['cf_char_allowed']="Povolené znaky";
+$plugin_tx['cryptographp']['cf_crypt_easy']="Majú byť kryptogramy vytvárané alternatívne zo spoluhlások a samohlások? <em>áno</em> alebo <em>nie</em>: <em>yes</em> or <em>no</em>";
+$plugin_tx['cryptographp']['cf_char_allowed_consonants']="Povolené spoluhlásky";
+$plugin_tx['cryptographp']['cf_char_allowed_vowels']="Povolené samohlásky";
+$plugin_tx['cryptographp']['cf_char_count_min']="Minimálny počet znakov v kryptograme.";
+$plugin_tx['cryptographp']['cf_char_count_max']="Maximálny počet znakov v kryptograme.";
+$plugin_tx['cryptographp']['cf_char_space']="Medzera medzi znakmi v px-";
+$plugin_tx['cryptographp']['cf_char_size_min']="Minimálna veľkosť fontu pre znaky";
+$plugin_tx['cryptographp']['cf_char_size_max']="Maximálna veľkosť fontu pre znaky";
+$plugin_tx['cryptographp']['cf_char_angle_max']="Max. uhol naklonenia znakov";
+$plugin_tx['cryptographp']['cf_char_displace']="Majú sa znaky zobraziť náhodne vertikálne? <em>áno</em> alebo <em>nie</em>";
+$plugin_tx['cryptographp']['cf_crypt_gaussian_blur']="Má byť obrázok rozostrený Gausianovou metódou?: <em>áno</em> alebo <em>nie</em>. Vyžaduje PHP > 5.0.0";
+$plugin_tx['cryptographp']['cf_crypt_gray_scale']="Má byť obrázok konvertovaný do šedej škály? <em>áno</em> alebo <em>nie</em>. Vyžaduje PHP > 5.0.0";
+$plugin_tx['cryptographp']['cf_noise_pixel_min']="Minimálny počet náhodných pixelov.";
+$plugin_tx['cryptographp']['cf_noise_pixel_max']="Maximálny počet náhodných pixelov.";
+$plugin_tx['cryptographp']['cf_noise_line_min']="Minimálny počet náhodných čiar.";
+$plugin_tx['cryptographp']['cf_noise_line_max']="Maximálny počet náhodných čiar.";
+$plugin_tx['cryptographp']['cf_noise_circle_min']="Minimálny počet náhodných krúžkov.";
+$plugin_tx['cryptographp']['cf_noise_circle_max']="Maximálny počet náhodných krúžkov.";
+$plugin_tx['cryptographp']['cf_noise_color_char']="Farba šumu: <em>1</em> (Farba znakov), <em>2</em> (Farba pozadia) alebo <em>3</em> (náhodná farba)";
+$plugin_tx['cryptographp']['cf_noise_brush_size']="Hrúbka čiar a krúžkov.";
+$plugin_tx['cryptographp']['cf_noise_above']="Má sa okolo znakov zobraziť šum? <em>áno</em> alebo <em>nie</em>";
+$plugin_tx['cryptographp']['cf_crypt_format']="Formát obrázku: <em>gif</em>, <em>png</em> alebo <em>jpeg</em>";
+$plugin_tx['cryptographp']['cf_crypt_use_timer']="Čas medzi jednotlivými obnovami kryptogramu.";
+$plugin_tx['cryptographp']['cf_crypt_use_timer_error']="Stratégia, ak sa kryptogramy opbnovujú príliš často: <em>1</em> (vrátiť sa k obrázku), <em>2</em> (zobraziť chybové hlásenie) alebo <em>3</em> (použiť nastavený čas pre obnovenie)";
+
+?>
