@@ -1,5 +1,4 @@
 TODO:
-    add translations
     improve joinwav()
     improve error()
     get rid of cryptographp.cfg.php (use config.php directly)
@@ -21,6 +20,8 @@ cmb	made crypt_use_timer_error a boolean config option
 cmb	updated the manual
 cmb	moved the updating of the configuration to index.php
 cmb	implemented expiration of CAPTCHAs
+cmb	added slovak translation (provided by Tata)
+cmb	added czech translation (provided by oldnema)
 
 Version 1beta1 - released 2011-09-19
 cmb	initial release
